fix: handle missing package-lock.json in npm install

--- a/action.yml
+++ b/action.yml
@@ -40,7 +40,12 @@ runs:
         node-version: '18'
 
     - name: Install dependencies
-      run: npm ci
+      run: |
+        if [ -f package-lock.json ]; then
+          npm ci
+        else
+          npm install
+        fi
       shell: bash
 
     - name: Run AI Code Review
