--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -88,7 +88,12 @@ jobs:
 
       - name: Install AI Code Reviewer dependencies
         working-directory: ai-reviewer
-        run: npm ci
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
 
       - name: AI Code Review
         uses: obiwancenobi/ai-code-reviewer@v1
