--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "type": "commonjs",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "bugs": {
     "url": "https://github.com/obiwancenobi/ai-code-reviewer/issues"
   },
@@ -22,6 +25,7 @@
     "@anthropic-ai/sdk": "^0.68.0",
     "@google/generative-ai": "^0.24.1",
     "@octokit/rest": "^22.0.1",
+    "commander": "^12.1.0",
     "discord.js": "^14.24.2",
     "minimatch": "^10.1.1",
     "openai": "^6.8.1"
