--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -62,6 +62,10 @@ on:
 jobs:
   ai-review:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
     if: github.event.pull_request.draft == false
 
     steps:
@@ -96,7 +100,7 @@ jobs:
           fi
 
       - name: AI Code Review
-        uses: obiwancenobi/ai-code-reviewer@v1
+        uses: obiwancenobi/ai-code-reviewer@v1.0.12
         with:
           pr-number: ${{ inputs.pr-number || github.event.pull_request.number }}
           repository: ${{ inputs.repository || github.repository }}
