--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "ai-code-reviewer",
-  "version": "1.0.12",
+  "version": "1.0.14",
   "description": "AI as Code Reviewer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -24,11 +26,13 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.68.0",
     "@google/generative-ai": "^0.24.1",
+    "@mistralai/mistralai": "^1.10.0",
     "@octokit/rest": "^22.0.1",
     "commander": "^12.1.0",
     "discord.js": "^14.24.2",
     "minimatch": "^10.1.1",
-    "openai": "^6.8.1"
+    "openai": "^6.8.1",
+    "togetherjs": "^0.0.1"
   },
   "devDependencies": {
     "eslint": "^9.39.1",
