--- a/.github/marketplace/metadata.yml
+++ b/.github/marketplace/metadata.yml
@@ -1,5 +1,5 @@
 # .github/marketplace/metadata.yml
-name: AI Code Reviewer
+name: BugBeaver Code Reviewer
 description: >
   AI-powered code review automation for GitHub pull requests using configurable AI models and reviewer personas.
 pricing_tiers:
@@ -9,10 +9,10 @@ categories:
   - continuous-integration
   - ai-tools
 branding:
-  icon: "icon.png"
+  icon: "bugbeaver.png"
   color: "blue"
 long_description: |
-  🚀 **AI Code Reviewer** brings AI-driven code review automation into your development workflow.
+  🚀 **BugBeaver Code Reviewer** brings AI-driven code review automation into your development workflow.
 
   🤖 **Features:**
   - Multi-Provider AI Support: OpenAI GPT-4, Anthropic Claude, Google Gemini, DeepSeek, OpenRouter, xAI Grok, Groq, and Z.ai
@@ -39,7 +39,7 @@ long_description: |
     review:
       runs-on: ubuntu-latest
       steps:
-        - uses: obiwancenovi/ai-code-reviewer@v1.0.18
+        - uses: obiwancenovi/ai-code-reviewer@v1.0.19
           with:
             pr-number: ${{ github.event.pull_request.number }}
             repository: ${{ github.repository }}
